--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 		<a class="navbar-brand" href="#">Return to Portfolio</a>
 		<div class="collapse navbar-collapse">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a class="nav-link" href="#interface">Interface</a></li>
+				<li class="nav-item"><a class="nav-link" href="#interface">Theme</a></li>
 				<li class="nav-item"><a class="nav-link" href="#requirements">Requirements</a></li>
 				<li class="nav-item"><a class="nav-link" href="#usability">Usability</a></li>
-				<li class="nav-item"><a class="nav-link" href="#analysis">Analysis</a></li>
+				<li class="nav-item"><a class="nav-link" href="#implementation">Implementation</a></li>
+				<li class="nav-item"><a class="nav-link" href="#website">Website</a></li>
 			</ul>
 		</div>
 	</div>
 </nav>
 
-<div id="interface" class="d-flex flex-column justify-content-center align-items-center">
+<div id="theme" class="d-flex flex-column justify-content-center align-items-center">
 	<h1 class="text main_title">Ticker's Tickets: Drive In Movie Theater Website</h1>
 	<div class="container-fluid">
 		<div class="container">
@@ -179,7 +180,7 @@
 	</div>
 
 
-<div id="analysis" class="container-fluid bg-section">
+<div id="implementation" class="container-fluid bg-section">
 	<div class="container">
 		<h1 class="text main_title text-center">Implementation Requirements</h1>
 		<div class="container">
@@ -234,7 +235,7 @@
 </div>
 </div>
 
-<div id="analysis" class="container-fluid ">
+<div id="website" class="container-fluid ">
 	<div class="container">
 		<h1 class="text main_title text-center">Website</h1>
 		<div class="container-fluid">
