--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 			<h5 style="color:#dffd37;text-align:center;"> React is amazing for developing interactive interfaces!
 			</h5>
 			<br>
-			<h5 style="color:#EBF5FB;"> Now that you've watched a fantasic movie, you can click here to go explore other entertainment suggestions!
+			<h5 style="color:#EBF5FB;"> Now that you've watched a fantasic movie, you can click <a href="https://happybunny888.github.io/final-portfolio/"> here </a> to go explore other entertainment suggestions!
 			</h5>
 		</div>
 	</div>
