--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark" style="width:100%;">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">Return to Portfolio</a>
+		<a class="navbar-brand" href="https://happybunny888.github.io/final-portfolio/" style="text-decoration:none">Return to Portfolio</a>
 		<div class="collapse navbar-collapse">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item"><a class="nav-link" href="#interface">Theme</a></li>
@@ -256,7 +256,7 @@
 			<h5 style="color:#dffd37;text-align:center;"> React is amazing for developing interactive interfaces!
 			</h5>
 			<br>
-			<h5 style="color:#EBF5FB;"> Now that you've watched a fantasic movie, you can click <a href="https://happybunny888.github.io/final-portfolio/"> here </a> to go explore other entertainment suggestions!
+			<h5 style="color:#EBF5FB;"> Now that you've watched a fantasic movie, you can click <a href="https://happybunny888.github.io/final-portfolio/"> here</a> to go explore other entertainment suggestions!
 			</h5>
 		</div>
 	</div>
