--- a/index.html
+++ b/index.html
@@ -260,6 +260,14 @@
 	<div class="container">
 		<div class="d-flex lead article-entry">
 			<div class="rcorners_project_desc" style="width: 100%;">
+				<h5 style="text-align:center;"><strong>Possible Additions:</strong></h5>
+ 				<h5>This assignment orginally has no requirements for aesthetics. If given more time for this assignment,  
+ 					I would add a way to edit the quantity of any ticket type through the shopping cart (add an addition mode of changing). 
+ 					<br>
+ 					I would also like to make the buttons on the tickets and the shopping cart look nicer, and 
+ 					more movies of other genres could be added as well (I generated my own dataset so I only had 12)!</h5> 
+
+ 				<br>
 			<h5 style="color:#dffd37;text-align:center;"><strong>Conclusion:</strong> </h5>
 			<h5 style="color:#dffd37;text-align:center;"> React is amazing for developing interactive interfaces!
 			</h5>
